--- a/app/src/main/res/menu/menu_riskassetment_detail.xml
+++ b/app/src/main/res/menu/menu_riskassetment_detail.xml
@@ -2,32 +2,32 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_customer_edit"
+        android:id="@+id/menu_risk_edit"
         android:icon="@drawable/ic_action_edit"
         android:title="@string/label_edit"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menu_customer_save"
+        android:id="@+id/menu_risk_save"
         android:title="@string/label_save"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menu_customer_cancel"
+        android:id="@+id/menu_risk_cancel"
         android:title="@string/label_cancel"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menu_customer_detail_more"
+        android:id="@+id/menu_risk_detail_more"
         android:icon="@drawable/ic_action_more"
         android:title="@string/label_more"
         app:showAsAction="always">
         <menu>
             <item
-                android:id="@+id/menu_customer_share"
+                android:id="@+id/menu_risk_share"
                 android:title="@string/label_share" />
             <item
-                android:id="@+id/menu_customer_import"
+                android:id="@+id/menu_risk_import"
                 android:title="@string/label_import_contact" />
             <item
-                android:id="@+id/menu_customer_delete"
+                android:id="@+id/menu_risk_delete"
                 android:title="@string/label_delete" />
         </menu>
     </item>
