--- a/app/src/main/res/layout/riskassesment_detail.xml
+++ b/app/src/main/res/layout/riskassesment_detail.xml
@@ -76,12 +76,13 @@
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         app:iconResource="@drawable/ic_action_universe"></odoo.controls.OField>
 
+
                     <odoo.controls.OField
-                        android:id="@+id/email"
+                        android:id="@+id/partner_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="email"
+                        app:fieldName="partner_id"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         app:iconResource="@drawable/ic_action_message"></odoo.controls.OField>
 
@@ -90,20 +91,20 @@
                         android:layout_marginLeft="72dp" />
 
                     <odoo.controls.OField
-                        android:id="@+id/phone_number"
+                        android:id="@+id/assesment_method"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="phone"
+                        app:fieldName="assesment_method"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         app:iconResource="@drawable/ic_action_phone"></odoo.controls.OField>
 
                     <odoo.controls.OField
-                        android:id="@+id/mobile_number"
+                        android:id="@+id/procedure_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="mobile"
+                        app:fieldName="procedure_id"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>
 
@@ -112,21 +113,33 @@
                         android:layout_marginLeft="72dp" />
 
                     <odoo.controls.OField
-                        android:id="@+id/full_address"
+                        android:id="@+id/date_performed"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:controlLabel="@string/label_address"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="full_address"
+                        app:fieldName="date_performed"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>
 
                     <odoo.controls.OField
+                        android:id="@+id/date_valid_before"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="country_id"
+                        app:fieldName="date_valid_before"
                         app:fieldTextAppearance="?android:textAppearanceMedium"></odoo.controls.OField>
+
+                    <odoo.controls.OField
+                        android:id="@+id/date_updated"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:controlLabel="@string/label_address"
+                        app:fieldLabelColor="@color/theme_secondary"
+                        app:fieldName="date_updated"
+                        app:fieldTextAppearance="?android:textAppearanceMedium"
+                        app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>
+
 
 
                     <View
