--- a/app/src/main/res/layout/risk_detail.xml
+++ b/app/src/main/res/layout/risk_detail.xml
@@ -65,7 +65,9 @@
                         android:layout_height="wrap_content"
                         app:fieldName="is_company"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:showLabel="false"></odoo.controls.OField>
+                        app:showLabel="false">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:id="@+id/website"
@@ -74,7 +76,9 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="website"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_universe"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_universe">
+
+                    </odoo.controls.OField>
 
 
                     <odoo.controls.OField
@@ -84,7 +88,9 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="email"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_message"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_message">
+
+                    </odoo.controls.OField>
 
                     <View
                         style="@style/ViewSeparator"
@@ -97,7 +103,9 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="phone"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_phone"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_phone">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:id="@+id/mobile_number"
@@ -106,7 +114,9 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="mobile"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_mobile">
+
+                    </odoo.controls.OField>
 
                     <View
                         style="@style/ViewSeparator"
@@ -120,14 +130,18 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="full_address"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_location">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="country_id"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"></odoo.controls.OField>
+                        app:fieldTextAppearance="?android:textAppearanceMedium">
+
+                    </odoo.controls.OField>
 
 
                     <View
@@ -140,7 +154,9 @@
                         app:fieldLabelColor="@color/theme_secondary"
                         app:fieldName="comment"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_notes_content"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_notes_content">
+
+                    </odoo.controls.OField>
                 </odoo.controls.OForm>
             </LinearLayout>
         </RelativeLayout>
