--- a/app/src/main/res/layout/risk_detail.xml
+++ b/app/src/main/res/layout/risk_detail.xml
@@ -70,51 +70,27 @@
                     </odoo.controls.OField>
 
                     <odoo.controls.OField
-                        android:id="@+id/website"
+                        android:id="@+id/subject"
+                        app:controlLabel="@string/subject"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="website"
+                        app:fieldName="subject"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_universe">
+                        >
 
                     </odoo.controls.OField>
 
 
                     <odoo.controls.OField
-                        android:id="@+id/email"
+                        android:id="@+id/partner_id"
+                        app:controlLabel="@string/partner_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="email"
+                        app:fieldName="partner_id"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_message">
-
-                    </odoo.controls.OField>
-
-                    <View
-                        style="@style/ViewSeparator"
-                        android:layout_marginLeft="72dp" />
-
-                    <odoo.controls.OField
-                        android:id="@+id/phone_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="phone"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_phone">
-
-                    </odoo.controls.OField>
-
-                    <odoo.controls.OField
-                        android:id="@+id/mobile_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="mobile"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_mobile">
+                        >
 
                     </odoo.controls.OField>
 
@@ -123,40 +99,74 @@
                         android:layout_marginLeft="72dp" />
 
                     <odoo.controls.OField
-                        android:id="@+id/full_address"
+                        android:id="@+id/assesment_method"
+                        app:controlLabel="@string/assesment_method"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:controlLabel="@string/label_address"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="full_address"
+                        app:fieldName="assesment_method"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_location">
+                        >
+                        <!--  app:iconResource="@drawable/ic_action_phone"-->
+                    </odoo.controls.OField>
+
+                    <!-- <odoo.controls.OField
+                         android:id="@+id/procedure_id"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         app:fieldLabelColor="@color/theme_secondary"
+                         app:fieldName="procedure_id"
+                         app:fieldTextAppearance="?android:textAppearanceMedium"
+                         app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>-->
+
+
+                    <!--<View
+                        style="@style/ViewSeparator"
+                        android:layout_marginLeft="72dp" />-->
+
+                    <odoo.controls.OField
+                        android:id="@+id/date_performed"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:controlLabel="@string/date_performed"
+                        app:fieldLabelColor="@color/theme_secondary"
+                        app:fieldName="date_performed"
+                        app:fieldTextAppearance="?android:textAppearanceMedium"
+                        >
 
                     </odoo.controls.OField>
 
                     <odoo.controls.OField
+                        android:id="@+id/date_valid_before"
+                        app:controlLabel="@string/date_valid_before"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="country_id"
+                        app:fieldName="date_valid_before"
                         app:fieldTextAppearance="?android:textAppearanceMedium">
 
                     </odoo.controls.OField>
 
+                    <odoo.controls.OField
+                        android:id="@+id/date_updated"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:controlLabel="@string/date_updated"
+                        app:fieldLabelColor="@color/theme_secondary"
+                        app:fieldName="date_updated"
+                        app:fieldTextAppearance="?android:textAppearanceMedium"
+                        >
+
+                    </odoo.controls.OField>
+
+
 
                     <View
                         style="@style/ViewSeparator"
                         android:layout_marginLeft="72dp" />
 
-                    <odoo.controls.OField
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:fieldLabelColor="@color/theme_secondary"
-                        app:fieldName="comment"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_notes_content">
 
-                    </odoo.controls.OField>
                 </odoo.controls.OForm>
             </LinearLayout>
         </RelativeLayout>
@@ -177,7 +187,7 @@
             android:layout_height="wrap_content"
             android:background="#ffffff"
             android:orientation="vertical"
-            app:modelName="isg.risk_asessment">
+            app:modelName="isg.risk_assesment">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -233,7 +243,9 @@
                         app:fieldName="name"
                         app:fieldTextAppearance="?android:textAppearanceLarge"
                         app:showIcon="false"
-                        app:showLabel="false"></odoo.controls.OField>
+                        app:showLabel="false">
+
+                    </odoo.controls.OField>
 
                     <View style="@style/ViewSeparator" />
 
@@ -243,7 +255,9 @@
                         android:layout_height="wrap_content"
                         app:fieldName="is_company"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:showLabel="false"></odoo.controls.OField>
+                        app:showLabel="false">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:id="@+id/parent_id"
@@ -252,7 +266,9 @@
                         app:fieldName="parent_id"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
                         app:showLabel="false"
-                        app:widgetType="SearchableLive"></odoo.controls.OField>
+                        app:widgetType="SearchableLive">
+
+                    </odoo.controls.OField>
 
                     <View
                         style="@style/ViewSeparator"
@@ -263,50 +279,64 @@
                         android:layout_height="wrap_content"
                         app:fieldName="street"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_location">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="street2"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"></odoo.controls.OField>
+                        app:fieldTextAppearance="?android:textAppearanceMedium">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="city"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"></odoo.controls.OField>
+                        app:fieldTextAppearance="?android:textAppearanceMedium">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="zip"
-                        app:fieldTextAppearance="?android:textAppearanceMedium"></odoo.controls.OField>
+                        app:fieldTextAppearance="?android:textAppearanceMedium">
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="country_id"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:widgetType="SearchableLive"></odoo.controls.OField>
+                        app:widgetType="SearchableLive">
 
-                    <View
+                    </odoo.controls.OField>
+
+                    <!--<View
                         style="@style/ViewSeparator"
-                        android:layout_marginLeft="72dp" />
+                        android:layout_marginLeft="72dp" />-->
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="email"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_message"></odoo.controls.OField>
+                        >
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="website"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_universe"></odoo.controls.OField>
+                        >
+
+                    </odoo.controls.OField>
 
                     <View
                         style="@style/ViewSeparator"
@@ -318,14 +348,17 @@
                         android:layout_height="wrap_content"
                         app:fieldName="phone"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_phone"></odoo.controls.OField>
+                        >
+
+                    </odoo.controls.OField>
 
                     <odoo.controls.OField
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:fieldName="mobile"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>
+                        >
+                    </odoo.controls.OField>
 
                     <View
                         style="@style/ViewSeparator"
@@ -336,7 +369,9 @@
                         android:layout_height="wrap_content"
                         app:fieldName="comment"
                         app:fieldTextAppearance="?android:textAppearanceMedium"
-                        app:iconResource="@drawable/ic_action_notes_content"></odoo.controls.OField>
+                        app:iconResource="@drawable/ic_action_notes_content">
+
+                    </odoo.controls.OField>
 
                 </LinearLayout>
 
